// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/ProfileViewerContainer can move between tabs 1`] = `
<t
  customClassName="ProfileViewerContainer"
  onDragEnd={[Function]}
  onDragStart={null}
  onSecondaryPaneSizeChange={null}
  percentage={true}
  primaryIndex={0}
  primaryMinSize={100}
  secondaryInitialSize={20}
  secondaryMinSize={10}
  vertical={false}
>
  <Connect(ProfileViewer) />
</t>
`;

exports[`app/ProfileViewerContainer can move between tabs 2`] = `
<t
  customClassName="ProfileViewerContainer"
  onDragEnd={[Function]}
  onDragStart={null}
  onSecondaryPaneSizeChange={null}
  percentage={true}
  primaryIndex={0}
  primaryMinSize={100}
  secondaryInitialSize={20}
  secondaryMinSize={10}
  vertical={false}
>
  <Connect(ProfileViewer) />
</t>
`;

exports[`app/ProfileViewerContainer can move between tabs 3`] = `
<t
  customClassName="ProfileViewerContainer"
  onDragEnd={[Function]}
  onDragStart={null}
  onSecondaryPaneSizeChange={null}
  percentage={true}
  primaryIndex={0}
  primaryMinSize={100}
  secondaryInitialSize={20}
  secondaryMinSize={10}
  vertical={false}
>
  <Connect(ProfileViewer) />
</t>
`;

exports[`app/ProfileViewerContainer can move between tabs 4`] = `
<t
  customClassName="ProfileViewerContainer"
  onDragEnd={[Function]}
  onDragStart={null}
  onSecondaryPaneSizeChange={null}
  percentage={true}
  primaryIndex={0}
  primaryMinSize={100}
  secondaryInitialSize={20}
  secondaryMinSize={10}
  vertical={false}
>
  <Connect(ProfileViewer) />
</t>
`;

exports[`app/ProfileViewerContainer can move between tabs 5`] = `
<t
  customClassName="ProfileViewerContainer"
  onDragEnd={[Function]}
  onDragStart={null}
  onSecondaryPaneSizeChange={null}
  percentage={true}
  primaryIndex={0}
  primaryMinSize={0}
  secondaryInitialSize={20}
  secondaryMinSize={10}
  vertical={false}
>
  <Connect(ProfileViewer) />
  <Connect(CallTreeSidebar) />
</t>
`;

exports[`app/ProfileViewerContainer renders an initial view 1`] = `
<t
  customClassName="ProfileViewerContainer"
  onDragEnd={[Function]}
  onDragStart={null}
  onSecondaryPaneSizeChange={null}
  percentage={true}
  primaryIndex={0}
  primaryMinSize={0}
  secondaryInitialSize={20}
  secondaryMinSize={10}
  vertical={false}
>
  <Connect(ProfileViewer) />
  <Connect(CallTreeSidebar) />
</t>
`;

exports[`app/ProfileViewerContainer renders initial views with tab calltree 1`] = `
<t
  customClassName="ProfileViewerContainer"
  onDragEnd={[Function]}
  onDragStart={null}
  onSecondaryPaneSizeChange={null}
  percentage={true}
  primaryIndex={0}
  primaryMinSize={0}
  secondaryInitialSize={20}
  secondaryMinSize={10}
  vertical={false}
>
  <Connect(ProfileViewer) />
  <Connect(CallTreeSidebar) />
</t>
`;

exports[`app/ProfileViewerContainer renders initial views with tab flame-graph 1`] = `
<t
  customClassName="ProfileViewerContainer"
  onDragEnd={[Function]}
  onDragStart={null}
  onSecondaryPaneSizeChange={null}
  percentage={true}
  primaryIndex={0}
  primaryMinSize={100}
  secondaryInitialSize={20}
  secondaryMinSize={10}
  vertical={false}
>
  <Connect(ProfileViewer) />
</t>
`;

exports[`app/ProfileViewerContainer renders initial views with tab marker-chart 1`] = `
<t
  customClassName="ProfileViewerContainer"
  onDragEnd={[Function]}
  onDragStart={null}
  onSecondaryPaneSizeChange={null}
  percentage={true}
  primaryIndex={0}
  primaryMinSize={100}
  secondaryInitialSize={20}
  secondaryMinSize={10}
  vertical={false}
>
  <Connect(ProfileViewer) />
</t>
`;

exports[`app/ProfileViewerContainer renders initial views with tab marker-table 1`] = `
<t
  customClassName="ProfileViewerContainer"
  onDragEnd={[Function]}
  onDragStart={null}
  onSecondaryPaneSizeChange={null}
  percentage={true}
  primaryIndex={0}
  primaryMinSize={100}
  secondaryInitialSize={20}
  secondaryMinSize={10}
  vertical={false}
>
  <Connect(ProfileViewer) />
</t>
`;

exports[`app/ProfileViewerContainer renders initial views with tab stack-chart 1`] = `
<t
  customClassName="ProfileViewerContainer"
  onDragEnd={[Function]}
  onDragStart={null}
  onSecondaryPaneSizeChange={null}
  percentage={true}
  primaryIndex={0}
  primaryMinSize={100}
  secondaryInitialSize={20}
  secondaryMinSize={10}
  vertical={false}
>
  <Connect(ProfileViewer) />
</t>
`;
